<resources>
    <string name="app_name">Undelete</string>
    <string name="recoverSms">恢复短信</string>
    <string name="recoverPhot">恢复照片</string>
    <string name="recoverTxt">恢复TXT</string>
    <string name="recoverContact">恢复联系人</string>
    <string name="recoverCall">恢复通讯记录</string>
    <string name="setting">设置</string>
    <string name="question">常见问题</string>
    <string name="thirdparty">一键登录</string>
    <string name="gold">百宝箱</string>
    <string name="about">关于</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="weibosdk_demo_toast_auth_success">授权成功</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
    <string name="weibosdk_demo_token_to_string_format_1">Token：%1$s \n有效期：%2$s</string>
    <string name="weibosdk_demo_token_has_existed">Token 仍在有效期内，无需再次登录。</string>
    <string name="save_external">外置存储2</string>
    <string name="save_inner">内置存储</string>
    <string name="save_choose">请选择需要恢复的存储空间:</string>
</resources>
